Finished week3 project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<head>
+<html lang="en">
+    <head>
+        <title>Index Page</title>
+    </head>
+    <body>
+        This is the index page
+    </body>
 
-</head>
-<body>
-    This is the index page 
-</body>
+</html>
